--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esir-tp5",
+  "name": "esir-tp6",
   "version": "1.0.0",
   "description": "Module d'authentification",
   "main": "server.js",
@@ -33,6 +33,8 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/uuid": "^3.4.4",
     "bcrypt": "^3.0.6",
+    "config": "^3.1.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
